@@ -19,6 +19,7 @@ The following list contains all changes to pgAdmin III, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2006-07-17 DP  1.4.3  Display interval precision properly, per Walter Haslbeck
     <li>2006-06-30 DP  1.4.3  Return the script return value when executing shell scripts from pgAgent, per Eric Shuman
     <li>2006-06-22 DP  1.4.3  Use a slider instead of a spin control to avoid a wxGTK bug on the status form, per Peter Eisentraut.
     <li>2006-05-22 DP  1.4.3  Allow non-superusers to edit roles where appropriate [Thomas Sondag]
